--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 body{
     background-color: var(--bg-body);
-    
+    font-family: 'Public Sans', sans-serif;
 }
 
 .header-container{
@@ -23,6 +23,10 @@ body{
     padding: 20px;
 }
 
+.header-content .header-container-logo img{
+    width: 45px;
+}
+
 .header-content .header-container-logo,a{
     display: flex;
     justify-content: center;
@@ -31,6 +35,7 @@ body{
     font-weight: 800;
     text-decoration: none;
     color: var(--color-text);
+    font-size: 20px;
 }
 
 .header-content .ul-desktop{
@@ -47,6 +52,7 @@ body{
     padding: 10px 17px;
     font-size: 18px;
     font-weight: 400;
+    transition: 0.3s ease-in-out;
 }
 
 .header-content .ul-desktop li a:hover{
@@ -79,6 +85,7 @@ body{
    .ul-mobile li a{
     font-size: 15px;
    padding: 20px 0;
+   transition: 0.3s ease-in-out;
    }
 
    .ul-mobile li a:hover{
@@ -116,6 +123,10 @@ body{
    .header-container .header-content{
         display: flex;
         flex-direction: column;
+   }
+
+   .header-content .header-container-logo,a{
+        font-size: 40px;
    }
 
 }
